[project]
name = "pg-sql-select"
version = "0.1.0"
description = "A SQL SELECT Demo Using FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pre-commit>=4.2.0",
    "psycopg2>=2.9.10",
]
[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
